--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -1,20 +1,18 @@
-
-.box {
-  width: fit-content;
-  min-height: 400px;
-  max-height: 600px;
-  overflow-y: auto;
-  border: solid 1px #000;
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
+.chat-wrapper {
+    width: 100%;
+    height: 600px;
+    overflow-y: auto;
+    border: solid 1px #000;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.messages {
-  flex-grow: 1;
+.chat-messages {
+    flex-grow: 1;
+    overflow-y: auto;
 }
 
-.input-div {
-  display: flex;
-  width: 100%;
+.chat-input {
+    display: flex;
+    width: 100%;
 }
