--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,36 @@ form .form-inner input[type="submit"]:hover {
     color: red;
     font-weight: bold;
 }
+
+.ring-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.circle {
+    width: 15px;
+    height: 15px;
+    background-color: hsl(93, 77%, 42%);
+    border-radius: 50%;
+    position: absolute;
+}
+
+.ringring {
+    border: 3px solid #62bd19;
+    border-radius: 30px;
+    height: 26px;
+    width: 26px;
+    
+    top: -5.5px;
+    left: -5.5px;
+    animation: pulsate 1s ease-out;
+    animation-iteration-count: infinite; 
+    opacity: 0.0;
+    position: absolute;
+}
+@keyframes pulsate {
+    0% {transform: scale(0.1, 0.1); opacity: 0.0;}
+    50% {opacity: 1.0;}
+    100% {transform: scale(1.2, 1.2); opacity: 0.0;}
+}
